--- a/campañas/index.html
+++ b/campañas/index.html
@@ -32,7 +32,7 @@
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Usuarios</a></li>
+                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
                                     <li><a href="">Rol</a></li>
                                 </ul>
                             </li>
@@ -65,27 +65,27 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Campaña A</td>
+                                    <td><strong>Campaña A</strong></td>
                                     <td><button class="btn btn-primary btn-sm" onclick="location.replace('./editar.html')">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Notificación B</td>
+                                    <td><strong>Campaña B</strong></td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Notificación C</td>
+                                    <td><strong>Campaña C</strong></td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Notificación D</td>
+                                    <td><strong>Campaña D</strong></td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Notificación E</td>
+                                    <td><strong>Campaña E</strong></td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Notificación F</td>
+                                    <td><strong>Campaña F</td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                             </tbody>
