--- a/notificaciones/index.html
+++ b/notificaciones/index.html
@@ -32,7 +32,7 @@
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Usuarios</a></li>
+                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
                                     <li><a href="">Rol</a></li>
                                 </ul>
                             </li>
@@ -74,27 +74,27 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Prevení el Dengue</td>
-                                            <td>Dengue</td>
-                                            <td>AAAA/MM/DD</td>
+                                            <td><strong>Prevení el Dengue</strong></td>
+                                            <td><strong>Dengue</strong></td>
+                                            <td><strong>AAAA/MM/DD</strong></td>
                                             <td><button  class="btn btn-primary btn-sm" onclick="location.replace('./editar.html')">Editar</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 6</td>
-                                            <td>-</td>
-                                            <td>AAAA/MM/DD</td>
+                                            <td><strong>Notificación 6</strong></td>
+                                            <td><strong>-</strong></td>
+                                            <td><strong>AAAA/MM/DD</strong></td>
                                             <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 7</td>
-                                            <td>Campaña C</td>
-                                            <td>AAAA/MM/DD</td>
+                                            <td><strong>Notificación 7</strong></td>
+                                            <td><strong>Campaña C</strong></td>
+                                            <td><strong>AAAA/MM/DD</strong></td>
                                             <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 8</td>
-                                            <td>Campaña B</td>
-                                            <td>AAAA/MM/DD</td>
+                                            <td><strong>Notificación 8</strong></td>
+                                            <td><strong>Campaña B</strong></td>
+                                            <td><strong>AAAA/MM/DD</strong></td>
                                             <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                         </tr>
                                     </tbody>
@@ -113,21 +113,21 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Notificación 1</td>
-                                            <td>Campaña A</td>
-                                            <td>AAAA/MM/DD</td>
+                                            <td><strong>Notificación 1</strong></td>
+                                            <td><strong>Campaña A</strong></td>
+                                            <td><strong>AAAA/MM/DD</strong></td>
                                             <td><button class="btn btn-primary btn-sm" onclick="location.replace('./ver.html')">Ver</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 2</td>
-                                            <td>Campaña B</td>
-                                            <td>AAAA/MM/DD</td>
+                                            <td><strong>Notificación 2</strong></td>
+                                            <td><strong>Campaña B</strong></td>
+                                            <td><strong>AAAA/MM/DD</strong></td>
                                             <td><button class="btn btn-primary btn-sm">Ver</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Notificación 3</td>
-                                            <td>Campaña C</td>
-                                            <td>AAAA/MM/DD</td>
+                                            <td><strong>Notificación 3</strong></td>
+                                            <td><strong>Campaña C</strong></td>
+                                            <td><strong>AAAA/MM/DD</strong></td>
                                             <td><button class="btn btn-primary btn-sm">Ver</button></td>
                                         </tr>
                                     </tbody>
