--- a/notificaciones/ver.html
+++ b/notificaciones/ver.html
@@ -37,7 +37,7 @@
                                     aria-haspopup="true" aria-expanded="false">Configuración<span
                                         class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Usuarios</a></li>
+                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
                                     <li><a href="">Rol</a></li>
                                 </ul>
                             </li>
@@ -131,15 +131,15 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Medio</td>
+                                            <td><strong>Medio</strong></td>
                                             <td><button class="btn btn-primary btn-sm" onclick="location.replace('./medio.html')">Ver</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Fecha</td>
+                                            <td><strong>Fecha</strong></td>
                                             <td><button class="btn btn-primary btn-sm">Ver</button></td>
                                         </tr>
                                         <tr>
-                                            <td>Destinatarios</td>
+                                            <td><strong>Destinatarios</strong></td>
                                             <td><button class="btn btn-primary btn-sm">Ver</button></td>
                                         </tr>
                                     </tbody>
