--- a/plantillas/nueva.html
+++ b/plantillas/nueva.html
@@ -38,7 +38,7 @@
                                     aria-haspopup="true" aria-expanded="false">Configuración<span
                                         class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Usuarios</a></li>
+                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
                                     <li><a href="">Rol</a></li>
                                 </ul>
                             </li>
