--- a/notificaciones/nueva.html
+++ b/notificaciones/nueva.html
@@ -38,7 +38,7 @@
                                     aria-haspopup="true" aria-expanded="false">Configuración<span
                                         class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Usuarios</a></li>
+                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
                                     <li><a href="">Rol</a></li>
                                 </ul>
                             </li>
@@ -119,15 +119,15 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>Medio</td>
+                                                <td><strong>Medio</strong></td>
                                                 <td><button class="btn btn-primary btn-sm">Seleccionar</button></td>
                                             </tr>
                                             <tr>
-                                                <td>Fecha</td>
+                                                <td><strong>Fecha</strong></td>
                                                 <td><button class="btn btn-primary btn-sm">Seleccionar</button></td>
                                             </tr>
                                             <tr>
-                                                <td>Destinatarios</td>
+                                                <td><strong>Destinatarios</strong></td>
                                                 <td><button class="btn btn-primary btn-sm">Seleccionar</button></td>
                                             </tr>
                                         </tbody>
