--- a/plantillas/index.html
+++ b/plantillas/index.html
@@ -32,7 +32,7 @@
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="">Usuarios</a></li>
+                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
                                     <li><a href="">Rol</a></li>
                                 </ul>
                             </li>
@@ -62,19 +62,19 @@
                                 <th><p class="text-muted">Acción</p></th>
                             </thead>
                             <tr>
-                                <td>Dengue A</td>
+                                <td><strong>Dengue A</strong></td>
                                 <td><button class="btn btn-primary btn-sm" onclick="location.replace('./editar.html')">Editar</button></td>
                             </tr>
                             <tr>
-                                <td>Dengue B</td>
+                                <td><strong>Dengue B</strong></td>
                                 <td><button class="btn btn-primary btn-sm">Editar</button></td>
                             </tr>
                             <tr>
-                                <td>Vacunación A</td>
+                                <td><strong>Vacunación A</strong></td>
                                 <td><button class="btn btn-primary btn-sm">Editar</button></td>
                             </tr>
                             <tr>
-                                <td>Vacunación B</td>
+                                <td><strong>Vacunación B</strong></td>
                                 <td><button class="btn btn-primary btn-sm">Editar</button></td>
                             </tr>
                         </table>
