sección roles y usuarios

--- a/usuarios/rol.html
+++ b/usuarios/rol.html
@@ -32,8 +32,8 @@
                             <li class="">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuración<span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
-                                    <li><a href="">Rol</a></li>
+                                    <li><a href="../usuarios/usuarios.html">Usuarios</a></li>
+                                    <li><a href="../usuarios/rol.html">Rol</a></li>
                                 </ul>
                             </li>
                             <li class="">
@@ -56,6 +56,7 @@
                         <div class="col-md-12">
                             <h1 class="h4 m-t-2">Configuración de rol</h1>
                             <hr>
+                            <button onclick="location.replace('./nuevorol.html')" class="btn btn-success btn-sm pull-right">+ Nuevo rol</button>
                             <div>
                                 <section>
                                     <table class="table table-responsive-poncho table-striped">
