--- a/notificaciones/editarmedio.html
+++ b/notificaciones/editarmedio.html
@@ -34,8 +34,8 @@
                                     aria-haspopup="true" aria-expanded="false">Configuración<span
                                         class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="../usuarios/index.html">Usuarios</a></li>
-                                    <li><a href="">Rol</a></li>
+                                    <li><a href="../usuarios/usuarios.html">Usuarios</a></li>
+                                    <li><a href="../usuarios/rol.html">Rol</a></li>
                                 </ul>
                             </li>
                             <li class="">
