pequeños cambios en pagina de nuevo rol

--- a/usuarios/nuevorol.html
+++ b/usuarios/nuevorol.html
@@ -101,7 +101,7 @@
                                                 </tbody>
                                             </table>
                                           </td>
-                                        <td class="text-center">icono</td>
+                                        <td class="text-center"><></td>
                                             <td>
                                               <table class="table table-responsive-poncho table-striped">
                                                 <tbody>
