--- a/paginas/home.html
+++ b/paginas/home.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row m-t-2 m-b-4">
+                <div class="row m-b-4">
                     <div class="col-md-12">
                         <h2 class="h4 p-x-1 m-b-2">Enviar notificaciones</h2>
                         <div class="col-md-4">
