--- a/paginas/home.html
+++ b/paginas/home.html
@@ -101,6 +101,7 @@
                                 <thead>
                                     <tr>
                                         <th><p class="text-muted">Nombre</p></th>
+                                        <th><p class="text-muted">Tipo</p></th>
                                         <th><p class="text-muted">Campaña</p></th>
                                         <th><p class="text-muted">Fecha</p></th>
                                         <th><p class="text-muted">Accion</p></th>
@@ -109,24 +110,28 @@
                             <tbody>
                                 <tr>
                                     <td><strong>Prevení el Dengue</strong></td>
+                                    <td><strong>PUSH</strong></td>
                                     <td><strong>Dengue</strong></td>
                                     <td><strong>AAAA/MM/DD</strong></td>
                                     <td><button  class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
                                     <td><strong>Notificación 6</strong></td>
+                                    <td><strong>SPLASH</strong></td>
                                     <td><strong>-</strong></td>
                                     <td><strong>AAAA/MM/DD</strong></td>
                                     <td><button class="btn btn-primary btn-sm"  onclick="location.replace('../notificaciones/editar.html')">Editar</button></td>
                                 </tr>
                                 <tr>
                                     <td><strong>Notificación 7</strong></td>
+                                    <td><strong>NOVEDAD</strong></td>
                                     <td><strong>Campaña C</strong></td>
                                     <td><strong>AAAA/MM/DD</strong></td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
                                     <td><strong>Notificación 8</strong></td>
+                                    <td><strong>PUSH</strong></td>
                                     <td><strong>Campaña B</strong></td>
                                     <td><strong>AAAA/MM/DD</strong></td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
