sprint over jeje

--- a/notificaciones/editar.html
+++ b/notificaciones/editar.html
@@ -63,6 +63,14 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="row">
+                                            <div class="col-md-8">
+                                                <div class="form-item webform-component webform-component-textfield webform-component--textfield form-group form-item form-item-submitted-textfield form-type-textfield form-group">
+                                                    <label class="control-label">Link</label>
+                                                    <input class="form-control form-text required">
+                                                </div>
+                                            </div>
+                                        </div>
                                         <!-- <div class="row">
                                             <div class="col-md-8">
                                                 <div class="form-managed-file input-group">
