--- a/paginas/home.html
+++ b/paginas/home.html
@@ -37,8 +37,8 @@
         <div class="container">
             <div class="row">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h1 class="h4 m-t-3 p-x-1 m-b-0">Home</h1>
+                    <div class="col-md-12  m-t-2">
+                        <h1 class="h4 p-x-1 m-b-0">Home</h1>
                         <div class="col-md-12">
                             <hr>
                         </div>
@@ -48,7 +48,7 @@
                     <div class="col-md-12">
                         <h2 class="h4 p-x-1 m-b-2">Enviar notificaciones</h2>
                         <div class="col-md-4">
-                            <a class="panel panel-default">
+                            <a class="panel panel-default" href="../notificaciones/nuevapush.html">
                                 <div class="panel-body bg-gray p-y-2">
                                     <div class="media">
                                         <div class="media-body">
@@ -62,7 +62,7 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a class="panel panel-default">
+                            <a class="panel panel-default" href="../notificaciones/nuevasplash.html">
                                 <div class="panel-body bg-gray p-y-2">
                                     <div class="media">
                                         <div class="media-body">
@@ -76,7 +76,7 @@
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a class="panel panel-default">
+                            <a class="panel panel-default" href="../notificaciones/nuevanovedad.html">
                                 <div class="panel-body bg-gray p-y-2">
                                     <div class="media">
                                         <div class="media-body">
@@ -97,43 +97,43 @@
                     </div>
                     <div class="col-md-12">
                         <div class="row">
-                            <table class="table dataTables">
+                            <table class="table dataTables table-bordered table-striped">
                                 <thead>
                                     <tr>
-                                        <th><p class="text-muted">Nombre</p></th>
-                                        <th><p class="text-muted">Tipo</p></th>
-                                        <th><p class="text-muted">Campaña</p></th>
-                                        <th><p class="text-muted">Fecha</p></th>
-                                        <th><p class="text-muted">Accion</p></th>
+                                        <th><i class="fa fa-sort-amount-desc"></i> Nombre</th>
+                                        <th><i class="fa fa-sort-amount-desc"></i> Tipo</th>
+                                        <th><i class="fa fa-sort-amount-desc"></i> Campaña</th>
+                                        <th><i class="fa fa-sort-amount-desc"></i> Fecha</th>
+                                        <th>Accion</th>
                                     </tr>
                                 </thead>
                             <tbody>
                                 <tr>
-                                    <td><strong>Prevení el Dengue</strong></td>
-                                    <td><strong>PUSH</strong></td>
-                                    <td><strong>Dengue</strong></td>
-                                    <td><strong>AAAA/MM/DD</strong></td>
+                                    <td>Prevení el Dengue</td>
+                                    <td>PUSH</td>
+                                    <td>Dengue</td>
+                                    <td>AAAA/MM/DD</td>
                                     <td><button  class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td><strong>Notificación 6</strong></td>
-                                    <td><strong>SPLASH</strong></td>
-                                    <td><strong>-</strong></td>
-                                    <td><strong>AAAA/MM/DD</strong></td>
+                                    <td>Notificación 6</td>
+                                    <td>SPLASH</td>
+                                    <td>-</td>
+                                    <td>AAAA/MM/DD</td>
                                     <td><button class="btn btn-primary btn-sm"  onclick="location.replace('../notificaciones/editar.html')">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td><strong>Notificación 7</strong></td>
-                                    <td><strong>NOVEDAD</strong></td>
-                                    <td><strong>Campaña C</strong></td>
-                                    <td><strong>AAAA/MM/DD</strong></td>
+                                    <td>Notificación 7</td>
+                                    <td>NOVEDAD</td>
+                                    <td>Campaña C</td>
+                                    <td>AAAA/MM/DD</td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                                 <tr>
-                                    <td><strong>Notificación 8</strong></td>
-                                    <td><strong>PUSH</strong></td>
-                                    <td><strong>Campaña B</strong></td>
-                                    <td><strong>AAAA/MM/DD</strong></td>
+                                    <td>Notificación 8</td>
+                                    <td>PUSH</td>
+                                    <td>Campaña B</td>
+                                    <td>AAAA/MM/DD</td>
                                     <td><button class="btn btn-primary btn-sm">Editar</button></td>
                                 </tr>
                             </tbody>
