--- a/notificaciones/nueva.html
+++ b/notificaciones/nueva.html
@@ -1,3 +1,5 @@
+se puede borrar
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,50 +13,7 @@
 </head>
 
 <body>
-    <!--El header debería ser inyectado ya que es un componente reutilizable pero 
-    en esta instancia se agrega la etiqueta directamente en el archivo-->
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid container">
-                <div class="row">
-                    <div id="alignment-example" class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav main-menu">
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false" id="Notificaciones">Notificaciones<span
-                                        class="caret"></span></a>
-                                <ul class="dropdown-menu" aria-labelledby="Notificaciones">
-                                    <li><a href="../notificaciones/index.html">Panel de notificaciones</a></li>
-                                    <li><a href="../campañas/index.html">Campañas</a></li>
-                                    <li><a href="../plantillas/index.html">Plantillas</a></li>
 
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="../estadisticas/index.html">Estadísticas</a>
-                            </li>
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">Configuración<span
-                                        class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="../usuarios/usuarios.html">Usuarios</a></li>
-                                    <li><a href="../usuarios/rol.html">Rol</a></li>
-                                </ul>
-                            </li>
-                            <li class="">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                    aria-haspopup="true" aria-expanded="false">Raúl Perez<span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="">Salir</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
     <main>
         <div class="container">
             <div class="row">
