cambio de link a archivo de poncho

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../poncho.min.css" />
+    <link rel="stylesheet" href="./poncho.min.css" />
     <link
       href="/poncho/node_modules/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
